--- a/src/assets/scss/components/building-blocks/_rounded-social-buttons.scss
+++ b/src/assets/scss/components/building-blocks/_rounded-social-buttons.scss
@@ -11,7 +11,7 @@ $social-brand-facebook: #3b5998;
 $social-brand-twitter: #55acee;
 $social-brand-linkedin: #007bb5;
 $social-brand-youtube: #bb0000;
-$social-brand-instagram: #125688;
+$social-brand-instagram: #e95950;
 $social-brand-pinterest: #cb2027;
 $social-brand-google-plus: #dd4b39;
 $social-brand-github: #000000;
