--- a/src/assets/scss/components/personalWebsite.scss
+++ b/src/assets/scss/components/personalWebsite.scss
@@ -18,8 +18,11 @@
 
 .footerBlock{
 	background-color: $primary-color;
-	padding-top: 80px;
-	padding-bottom: 80px;
+	padding-top: 100px;
+	padding-bottom: 100px;
+	p{
+		color: $white;
+	}
 }
 
 .Hao-image {
